--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "SCY",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.4",
     "dotenv": "^16.0.1",
+    "koa": "^2.13.4",
     "koa-body": "^5.0.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
-    "koa2-cors": "^2.0.6"
+    "koa2-cors": "^2.0.6",
+    "nodemon": "^2.0.20"
   }
 }
