--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "qcloud-cos-sts": "^3.1.0"
   }
 }
