--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "SCY",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
@@ -18,7 +19,9 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "qcloud-cos-sts": "^3.1.0"
+    "qcloud-cos-sts": "^3.1.0",
+    "sequelize": "^6.25.5"
   }
 }
