--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "qcloud-cos-sts": "^3.1.0",
-    "sequelize": "^6.25.5"
+    "sequelize": "^6.25.5",
+    "ua-parser-js": "^1.0.32"
   }
 }
