--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "qcloud-cos-sts": "^3.1.0",
     "sequelize": "^6.25.5",
