--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build": "pm2 start index.js"
+    "build": "pm2 start index.js",
+    "docs-jwt": "jsdoc ./jwt/index.js -c ./jwt/jsdoc.json"
   },
   "author": "SCY",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "docdash": "^2.0.1",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.13.4",
