fix:email.service复用

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /node_modules
 /qcloud-cos/config.local.js
+/fuckingLib
+/.env.local
 /ssl/8514202_test.api.roadrunner2002.top.key
 /ssl/8514202_test.api.roadrunner2002.top.pem
