--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "lodash": "^4.17.21",
+    "log4js": "^6.9.1",
     "mysql2": "^2.3.3",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
