--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "build": "pm2 start index.js"
+    "build": "pm2 start index.js",
+    "push":"node ./workflow.js"
   },
   "author": "SCY",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^1.4.0",
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
@@ -27,6 +28,7 @@
     "nodemon": "^2.0.20",
     "qcloud-cos-sts": "^3.1.0",
     "sequelize": "^6.25.5",
+    "ssh2": "^1.11.0",
     "ua-parser-js": "^1.0.32",
     "ws": "^8.13.0"
   }
